objects/Location__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOB</label>
    <type>Date</type>
</CustomField>