objects/Location__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Managaer__c</referenceTo>
    <relationshipLabel>Work Locations</relationshipLabel>
    <relationshipName>Work_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>