objects/Location__c/fields/No_of_Managers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Managers__c</fullName>
    <description>This field is to show the No of Manager reporting to the location</description>
    <inlineHelpText>No of Manager reporting to the location</inlineHelpText>
    <label>No of Managers</label>
    <summaryForeignKey>Managaer__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>