objects/Location__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>skill</label>
    <length>180</length>
    <type>Text</type>
</CustomField>