objects/Location__c/fields/stipend__c.field-meta.xml
<CustomField>
    <fullName>stipend__c</fullName>
    <label>stipend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>