objects/Location__c/recordTypes/Experiance.recordType-meta.xml
<RecordType>
    <fullName>Experiance</fullName>
    <active>true</active>
    <label>Experiance</label>
</RecordType>