objects/Location__c/validationRules/Zip_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Validation</fullName>
    <active>true</active>
    <description>Zip Code must be in 5-digit format (0-9)</description>
    <errorConditionFormula>LEN(TEXT(Zip_Code__c)) &lt; 5</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Zip Code must be in 5-digit format (0-9)</errorMessage>
</ValidationRule>